wip: Added Basic API
